--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1992,18 +1992,17 @@ body.loaded {
   height: 45px;
   line-height: 45px;
   text-align: center;
-  font-size: 12px;
+  font-size: 14px;
   border: 1px solid rgba(255, 255, 255, 0.2);
   border-radius: 5px;
-  margin: 0 2px;
+  margin: 0 3px;
   -webkit-transition: all 0.4s;
   -o-transition: all 0.4s;
   transition: all 0.4s;
 }
 
 .intro-profile .box-img .social a:hover {
-  background: #fff;
-  color: #1d1d1d;
+  box-shadow: 0px 0px 8px #c8f31d;
 }
 
 .intro-profile .content {
