remove contact inputs - fix burger menu functionality

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -4378,3 +4378,8 @@ img.left {
 }
 
 /* ====================== [ End Responsive ] ====================== */
+@media (max-width: 991px) {
+  .nav-top .navbar {
+    display: none;
+  }
+}
