--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1243,9 +1243,9 @@ body.loaded {
 }
 
 .nav-top .social a {
-  width: 40px;
-  height: 40px;
-  line-height: 40px;
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
   text-align: center;
   font-size: 12px;
   border: 1px solid rgba(255, 255, 255, 0.2);
@@ -1257,8 +1257,7 @@ body.loaded {
 }
 
 .nav-top .social a:hover {
-  background: #fff;
-  color: #1d1d1d;
+  box-shadow: 0px 0px 8px #c8f31d;
 }
 
 .nav-top .navbar {
